hive-box-project/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hive-box-service
spec:
  type: ClusterIP
  selector:
    app: hive-box
  ports:
  - port: 80
    targetPort: 5000
